@startuml FileAndWorldGenServices
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Application & Infrastructure - File and World Generation Services

interface IFileService <<Application>> {
  + Save<T>(fileName: string, data: T)
  + Load<T>(fileName: string): T?
  + Exists(fileName: string): bool
  + Delete(fileName: string)
}

class FileService <<Infrastructure>> {
  - _options: JsonSerializerOptions
  + Save<T>(fileName: string, data: T)
  + Load<T>(fileName: string): T?
  + Exists(fileName: string): bool
  + Delete(fileName: string)
}

interface IWorldGenerationService <<Application>> {
  + SpawnPokemonByName(name: string, level: int): Pokemon
  + SpawnPokemonById(evolutionId: int, currentLevel: int): Pokemon
  + SpawnItemByName(name: string): Item
}

class WorldGenerationService <<Application>> {
  - _gameSession: GameSession
  - _pokemonSpawner: PokemonSpawner
  - _itemSpawner: ItemSpawner
  + SpawnPokemonByName(name: string, level: int): Pokemon
  + SpawnPokemonById(evolutionId: int, currentLevel: int): Pokemon
  + SpawnItemByName(name: string): Item
}

class PokemonSpawner <<Application>> {
  - _pokedexRepo: IPokedexRepository
  + SpawnPokemon(name: string, level: int): Pokemon
  + SpawnPokemonById(evolutionId: int, currentLevel: int): Pokemon
}

class ItemSpawner <<Application>> {
  - _itemRepo: IItemRepository
  - _random: Random
  + SpawnItem(name: string): Item
  + RollForRandomItem(): Item?
}

' Relationships
FileService ..|> IFileService

WorldGenerationService ..|> IWorldGenerationService
WorldGenerationService --> GameSession
WorldGenerationService --> PokemonSpawner
WorldGenerationService --> ItemSpawner

PokemonSpawner --> IPokedexRepository
ItemSpawner --> IItemRepository

@enduml</content>
<parameter name="filePath">c:\C#\PokemonConsole\TurnBasedPokemon\Diagram\ClassDiagram\FileAndWorldGenServices.puml